--- a/pom.xml
+++ b/pom.xml
@@ -98,13 +98,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Maven Web App Release</name>
-	      <url>http://3.109.55.137:9090/repository/Maven_Web_App_Release/</url>
+	      <url>http://13.232.104.227:8081/repository/maven_webapp_release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Maven Web App Snapshot </name>
-	      <url>http://3.109.55.137:9090/repository/Java_Web_App_SNAPSHOT/</url>
+	      <url></url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
@@ -115,7 +115,7 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
+				<artifactId>maven-compiler-plugihttp://13.232.104.227:8081/repository/maven_webapp_snapshot/n</artifactId>
 				<version>3.3</version>
 				<configuration>
 					<source>${jdk.version}</source>
